--- a/main.tex
+++ b/main.tex
@@ -201,7 +201,7 @@ One more specification is necessary: the fact that $f_k$ must commute with the l
 
 If we have a 1-functional $f$, each individual $f(\lambda_i)$, as well as $f(\lambda)$ itself, will separately take on a value. We require that the limit holds, meaning that \begin{gather}  f\left(\lim_{i = 1 \to \infty} \lambda_i\right) = f(\lambda). \end{gather}
 
-To give an example where this condition is not fulfilled, suppose we have a straight line $\lambda$, and we want to determine its length. Say the length and height both equal $a$. Therefore, it's length is $\sqrt{2}a$. However, the length of the horizontal and vertical components together is $2a$. Further subdividing each horizontal and vertical component will create a sequence that does, in the limit, converge to $\lambda$. However, the length of this sequence will always, even in the limit, remain $2a$. Therefore, the length functional does not commute with the limit. [\textbf{A picture here is necessary}]
+To give an example where this condition is not fulfilled, suppose we have a straight line $\lambda$, and we want to determine its length. Say the length and height both equal $a$. Therefore, it's length is $\sqrt{2}a$. However, the length of the horizontal and vertical components together is $2a$. Further subdividing each horizontal and vertical component will create a sequence that does, in the limit, converge to $\lambda$. However, the length of this sequence will always, even in the limit, remain $2a$. Therefore, the length functional does not commute with the limit. [\textbf{Insert picture of subdividing lines, showing that the length doesn't work out}]
 
 
 \begin{defn}
@@ -398,9 +398,9 @@ Suppose we have a mass functional $M \in F_3$ and some object $\tau \in S^3$, su
 
 \section{Wedge Product and Perpendicularity}
 
-Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane. This plane is effectively $\vec{x} \wedge \vec{y}$, where the $\vec{x}$ is traditionally the horizontal, and $\vec{y}$ the vertical. Switch now $\vec{x}$ and $\vec{y}$, so that $\vec{x}$ is now the vertical, and $\vec{y}$ is now the horizontal. This plane is now $\vec{y} \wedge \vec{x}$. It is impossible to go from $\vec{y} \wedge \vec{x}$ back to $\vec{x} \wedge \vec{y}$ purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning $\vec{x} \to -\vec{x}$, or $\vec{y} \to -\vec{y}$. Once that is done, the original $\vec{x} \wedge \vec{y}$ can be reached. Thus, we have that $\vec{x} \wedge \vec{y} = -\vec{y} \wedge \vec{x}$. . The tool that does this is the \textbf{wedge product}.
+Consider the problem now of constructing surfaces, volumes, and their higher dimensional equivalents. Arranging two 1-vectors $\vec{a}$ and $\vec{b}$ such that they both share a starting point allows one to construct a paralellogram (a 2-vector) with sides made up of the 1-vectors. The area and orientation of this 2-vector depends on the magnitudes and orientations of the two component 1-vectors. In 3D space, this orientation would be the line normal to the 2-surface, but we are not necessarily in 3D space. By flipping the direction of one of the vectors, the area of the resulting 2-vector would be the same as before, but the orientation (the normal) would be flipped. This same mechanism works for a 1-vector and a 2-vector, creating a 3-vector, as well as for the arbitrary m-vector and n-vector, creating an (m+n)-vector (though for vectors of degree greater than three, this is much harder to visualize). We require also that our method for combining k-vectors is anticommutative or skew-symmetric. To see why it must be this way, consider an x-y plane, where the x is traditionally the horizontal, and y the vertical. Switch now x and y, so that x is now the vertical, and y is now the horizontal. Rotating the axis such that y is once again the vertical will orient the x-axis in the "negative" horizontal direction. You could say that this is a (-x)-y plane. It is thus impossible to go from a y-x plane to an x-y plane purely through rotation. Instead, you need to also flip one of the coordinate axes, meaning x $\to$ x, or y $\to$ -y. Once that is done, the original x-y plane can be reached can be reached. The tool that combines k-vectors antisymmetrically is the \textbf{wedge product}.
 
-\textbf{Rotating gives different vectors, so trying to use this sort of notation here will get it harder to see. Need a picture}
+\textbf{Need a picture. First an x-y plane, then changing to a y-x plane, then a rotation to a (-x)-y plane}
 
 \begin{defn}
 	
@@ -411,21 +411,25 @@ Consider the problem now of constructing surfaces, volumes, and their higher dim
 
 
 	
- This discussion of joining vectors together and resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping the order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} linearly independent directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. As an example, consider the magnetic field $B$. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. $B$ is written out in component form as $B_x \hat{x} + B_y \hat{y} + B_z \hat{z}$, where each component is perpendicular to the other two. By saying that we will be keeping track of components using the directions tangent to the surface, what we mean is that instead of writing out $B$ as before, we will instead be writing it as $B_{yz} \hat{y}\wedge\hat{z} + B_{xz} \hat{x}\wedge\hat{z} + B_{xy} \hat{x}\wedge\hat{y}$. This notation should bring to mind the electromagnetic field tensor, $F^{\mu\nu}$, the components of which are the electric field and the magnetic field. This is good, as it is this tensor that generalizes to curved spacetime and beyond. 
- 
- Another issue with the cross product is that it requires that angles be defined, from which comes perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles requires geometric notions that we do not yet have defined, and is beyond the scope of what we're doing here. For our purposes here, because we are striving for generality in describing physical systems, we will be focusing our attention on the wedge product, rather than the cross product. 
-
-\textbf{Frame the fact that our tools are more general as a positive. In this paragraph, it almost sounds as a negative. It should be good that our tools are more general}
+ This discussion of joining vectors together and the resulting normal vectors brings to mind a tool from vector calculus: the cross product. If we have two vectors $\vec{a}$ and $\vec{b}$ in $\mathbb{R}^3$, the cross product of them $\vec{a} \times \vec{b}$ will return the vector perpendicular to the two of them. Furthermore, by flipping the order of the product, a minus sign is introduced, indicating that the magnitude is the same, but the orientation is flipped. That is, $\vec{a} \times \vec{b} = -(\vec{b} \times \vec{a})$. It is likely the case that the reader will be more familiar with the cross product, and may be wondering why we will be forgoing it in favor of the less familiar wedge product. This is because the cross product fails to generalize to any space beyond $\mathbb{R}^3$. It is in some sense a specific case of the wedge product, but with some crucial fundamental differences. The cross product depends on there being only one linearly independent direction normal to a surface, which is the case in $\mathbb{R}^3$. In $\mathbb{R}^4$ on the other hand, there are \emph{two} linearly independent directions normal to each surface, and in general n-dimensional space, there will be (n-2) linearly independent perpendiculars. What we do instead is keep track of components using the two directions tangent to the surface, rather than by the direction normal to the surface. As an example, consider the magnetic field $B$. In most treatments of electromagnetism, the magnetic field $B$ is implicitly treated as a pseudeovector. What this means is that $B$ behaves as a vector when undergoing rotation, but when undergoing reflection gains an additional sign flip. $B$ is written out in component form as $B_1 e^1 + B_2 e^2 + B_3 e^3$, where each component is perpendicular to the other two. By saying that we will be keeping track of components using the directions tangent to the surface, what we mean is that instead of writing out $B$ as before, we will instead be writing it as $B_{23} e^2\wedge e^3 + B_{13} e^1\wedge e^3 + B_{12} e^1\wedge e^2$. This notation should bring to mind the electromagnetic field tensor, $F^{\mu\nu}$, the components of which are the electric field and the magnetic field. This is good, as it is this tensor that generalizes to curved spacetime and beyond. \footnote{ Another issue with the cross product is that it requires that angles be defined, from which come perpendicularity and the normal vector, and the reader may have noticed that we have not yet given any notion of angles. Defining angles requires geometric notions that we do not have defined, and are in fact not necessary for our purposes. This speaks to the generality of the tools we are  using, as in most introductory physics topics, such as classical mechanics and electromagnetism, the fact that you have angles and distances is considered a given, and almost fundamental. As we have seen so far, they clearly are not.  }
 
 
-\textbf{Give a line here giving the intuition for why k-vectors can be decomposed in this way}
-\textbf{Use different letters in the wedge product, this notation I'm using is confusing}
-Any k-vector can be expressed as the wedge product of k 1-vectors. So, if we have $v^k \in V^k$, we can decompose it as $v^k = v^1\wedge v^2 \wedge v^3 \wedge ... \wedge v^n$, where each of the component vectors are in $V^1$. More concisely, this can be written in a product series form as $\wedge^n_{i=1} v^i$. We can therefore see k-forms as alternating functions on k 1-vectors. That is, we write $\omega_k(v^k) = \omega_k(v^1\wedge v^2 \wedge v^3 \wedge ... \wedge v^n) = \omega_k(\wedge^n_{i=1}v^i)$. Flipping the order of any of these products will introduce a minus in the overall product, hence "alternating function." 
 
 
-\textbf{Need a proposition that the k-form is an alternating function of k 1-forms, and the definition of the wedge product on forms, which lets you create "volume forms" from "area forms"}
+
+Just as we can combine k-vectors to create vectors of higher rank, we can also decompose k-vectors into the wedge product of lower rank vectors. A paralellogram, for instance, can be decomposed into the two vectors that define its sides. A cube can be decomposed into the three vectors that define the vertex. And Just so with a general infinitesimal paralellepiped. It follows that we can express any k-vector as the wedge product of k 1-vectors. So, if we have $v^k \in V^k$, we can decompose it as $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k$, where each of the component vectors are in $V^1$. More concisely, this can be written in a product series form as $\wedge^k_{i=1} a^i$. Decomposing k-vectors as we pass them to k-forms, we can write $\omega_k(v^k) = \omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... \wedge a^k) = \omega_k(\wedge^k_{i=1}a^i)$. Flipping the order of any of these products will introduce a minus in the overall product. Thus, we say that a k-form is an alternating function of k 1-vectors. 
+
+\begin{prop}
+	K-forms are alternating functions of k 1-vectors, meaning that if $v^k = a^1\wedge a^2 \wedge a^3 \wedge ... a^i \wedge a^j ... \wedge a^k$, then $\omega_k(v^k) = \omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... a^i \wedge a^j ... \wedge a^k) = -\omega_k(a^1\wedge a^2 \wedge a^3 \wedge ... a^j \wedge a^i ... \wedge a^k)$.
+\end{prop}
 
 
+
+Similar to our ability to construct k-vectors out of lower rank vectors, we can construct k-forms out of lower rank forms. In other words, we can construct a "volume" form out of "area" forms. We define the \textbf{wedge product} on forms as the tool that combines forms. 
+
+\begin{defn}
+	The \textbf{wedge product on forms} $\Omega_i \times \Omega_j \to \Omega_k$ generates k-forms such that if $\omega_i \wedge \omega_j = \omega_k$, and $v^i \wedge v^j = v^k$, then $\omega_k(v^k) = \omega_i(v^i) \wedge \omega_j(v^j)$. 
+\end{defn}
 
 
 
@@ -439,21 +443,27 @@ Any k-vector can be expressed as the wedge product of k 1-vectors. So, if we hav
 Up until this point in our discussion of k-forms and k-vectors, we've remained in a general coordinate-free form. For a conceptual understanding of the tools in use, this is just fine, and is in fact preferable. It shows that the math up until this point is "universal," and can be applied to any frame of reference without sacrificing scientific validity. Furthermore, it should be noted that nature itself is coordinate-free. The universe doesn't come prepackaged with coordinates, rather they are something that humans have created to streamline scientific investigation. The caveat to this is that while coordinate-free works well for conceptual understanding, it isn't all that useful for solving actual problems in physics, which is the entire point. Therefore, in this section, we will begin imposing coordinates on the systems we're working with. 
 
 
-Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $dP$ be an infinitesimal segment starting at point $P$. At this moment, the vector is coordinate-free; a thing "in itself", if you will. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $dP$. Mathematically, this relates to defining the coordinate system in terms of the \textbf{basis}, and assigning $dP$ directional components  along each basis vector, the sum of which gives us $dP$. So, \begin{gather}dP = dx^i \frac{\partial P}{\partial x^i} = dx^i e_i,\end{gather} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis.\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$} In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
+Recall now definitions 1.1 and 1.2, and say we have a point $P$ on a manifold $X$, and let $dP$ be an infinitesimal segment starting at point $P$. At this moment, the vector is coordinate-free. In some neighborhood of $P$ there will be a coordinate system defined that we can use to describe $dP$. Mathematically, this relates to defining the coordinate system in terms of the \textbf{basis}, and assigning $dP$ directional components  along each basis vector, the sum of which gives us $dP$. So, \begin{gather}dP = dx^i \frac{\partial P}{\partial x^i} = dx^i e_i,\end{gather} where $e_i$ is the ith basis vector, and $dx^i$ is the vector component along that basis.\footnote{There is an implied sum over $i$ here. That is, $\sum_i^n dx^i e_i = dx^i e_i$} In other words, we can say that $dx^1e_1$ gives us an infinitesimal segment along $x^1$, $dx^2e_2$ along $x^2$, and so on. 
 
 
-\textbf{Use lower indices in this definiiton, then define the co-basis, then define how they relate to each other}
 \begin{defn}
-	The \textbf{basis} of a space are a set of linearly independent directions such that any element of that space may be constructed using the basis vectors. In $\mathbb{R}^3$ using Cartesian coordinates, the basis vectors are equivalently $(e^1, e^2, e^3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. We can see from (2.16) that the basis can be thought of as a ratio between differentials and infinitesimal segments. 
+	The \textbf{basis} of $V^1$ is a set of linearly independent directions such that any element in $V^k$ may be constructed using the basis vectors. In $\mathbb{R}^3$ using Cartesian coordinates, the basis vectors are equivalently $(e_1, e_2, e_3), (\hat{x}, \hat{y}, \hat{z}), (\hat{i}, \hat{j}, \hat{k})$, among others. 
 \end{defn}
 
 
 
-\textbf{Need to say what the $e_i$s are, say like $e_i e^j = \delta_i^j$}
-Functionals will be dealt with in a similar way. Let $\omega$ be a covector and $dP$ be a vector. Then $\omega(dP)$ is a linear function of the coordinate differences along $dP$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial P} = \omega_i e^i$ where each $e^i$ is a basis covector.  $e^i(dP) = e^i(dx^j e_j) = dx^j e^i(e_j) = dx^j \delta^i_j = dx^i$.\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}
 
+Forms will be dealt with in a similar way. Let $\omega$ be a covector and $dP$ be a vector. Then $\omega(dP)$ is a linear function of the coordinate differences along $dP$. Therefore we can write $\omega = \omega_i \frac{\partial x^i}{\partial P} = \omega_i e^i$ where each $e^i$ is a basis covector, or \textbf{cobasis vector}. 
+\begin{defn}
+	The \textbf{cobasis} of $\Omega_1$ is a set of linearly independent directions such that any element in $\Omega_k$ may be constructed using the basis covectors. For a set of forms with underlying field $\mathbb{R}^3$, the cobasis may be written as $(e^1, e^2, e^3)$. 
+\end{defn}
 
-Putting everything together now, for vector dP and k-form $\omega$, $\omega(dP) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: when properly defined and carefully applied to each other, a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
+\begin{prop}
+	A basis vector $e_i$ and basis covector $e^j$ relate to each other as $e_ie^j = \delta^j_i$\footnote{$\delta^i_j$ is the Kronecker delta, defined to equal 1 when i = j, and 0 otherwise}.
+\end{prop}
+ 
+
+Putting everything together now, for vector dP and k-form $\omega$, $\omega(dP) = \omega_ie^i(dx^je_j) = \omega_idx^je^ie_j = \omega_idx^j\delta^i_j = \omega_i dx^i$. This is an interesting result: a vector and covector together naturally simplify down to a linear combination of infinitesimal segments. 
 
 Working in a space with specified coordinates allows us to solve real problems. For instance, in section 2.2 we got slightly ahead of ourselves by describing the oscillation of a mass on a spring with specific coordinates without yet having them defined. Now, with the tools in this section, such a problem is possible to solve.  
 
@@ -464,11 +474,11 @@ Working in a space with specified coordinates allows us to solve real problems. 
 
 Nature does not come prepackaged with a specific, preferred coordinate system. It follows then that any coordinate system that we choose to impose on our system is ultimately changeable, and that our system can just as well be described with any number of coordinate systems. For instance, if we say that some object lies at point $P$ with respect to coordinate system $Q$, we can just as well say where it lies with respect to coordinate system $Q'$. 
 
-\textbf{Just use the $e^i$ notation during the expansions, it makes things easier}
-\textbf{Fix up the language. Also, covectors, vectors, and tensors are invariant. The components are what change}
-So, suppose we have a covector $\omega = \omega_i \frac{\partial x^i}{\partial P}$. $x^i$ is the thing that describes this covector relative to a specific coordinate system, which we will call $Q$. Suppose now we have coordinate system $Q'$. We can transform $\omega$ to $\omega'$ by writing \begin{gather}\omega' = \omega_j \frac{\partial x^i}{\partial P} \frac{\partial x'^j}{\partial x^i} = \omega \frac{\partial x'^j}{\partial x^i}.\end{gather} Similarly, a vector $v$ will transform to $v'$ as $v' = v \frac{\partial x^i}{\partial x'^j}$. 
 
-\textbf{Clean up this derivation, it's not quite right. Notes are in overleaf}
+
+So, suppose we have a covector $\omega = \omega_i e^i$, where the covector components $\omega_i$ and basis $e^i$ are defined relative to coordinate system $Q$. Suppose now we have coordinate system $Q'$, relative to which the components and basis are $\omega_je^j$. $\omega$ is invariant, but the components and the basis are not, and their exact form depends on the coordinate system we're using. To transform between $Q$ and $Q'$, we write [\textbf{check over this derivation}]\begin{gather}\omega = \omega_i e^i = \omega_i e^i \delta_j^i e^j = \omega_j \delta^j_i e^j= \omega_j e^j \end{gather} Similarly, a vector $v$ will transform to $v'$ as $v' = v \frac{\partial x^i}{\partial x'^j}$. 
+
+
 
 In general, an object that has such a relationship with objects in other coordinate systems are called \textbf{tensors}. 
 
@@ -488,8 +498,8 @@ In general, an object that has such a relationship with objects in other coordin
 	If a tensor $X = 0$ in coordinate system Q, then $X' = 0$ in any other coordinate system $Q'$. This follows immediately from the transformation rules. 
 \end{coro}
 
-\textbf{Review this paragraph, it's not clear what the argument here is. Just say that "another way of thinking of tensors is this way, and this is more standard in math"}
-Other treatments of differential geometry in physics (such as Wald's ``General Relativity") define tensors foremost as multilinear mappings onto $\mathbb{R}$. That is, our defining feature of k-forms and covectors is used as the definition of tensors in general. What this means is that just as we can define $\omega_k \in \Omega_k : V^k \to \mathbb{R}$ as a function on k-vectors, we can define $v^k \in V^k : \Omega_k \to \mathbb{R}$ as a function on k-forms. In other words, k-forms are functions that take k-vectors to $\mathbb{R}$, and k-vectors are functions that take k-forms to $\mathbb{R}$. 
+
+Another way of thinking of tensors that may mesh better with a mathematician's way of thinking is given in other treatments of differential geometry in physics (such as Wald's ``General Relativity"). There, tensors are defined foremost as multilinear mappings onto $\mathbb{R}$. That is, our defining feature of k-forms and covectors is used as the definition of tensors in general. What this means is that just as we can define $\omega_k \in \Omega_k : V^k \to \mathbb{R}$ as a function on k-vectors, we can define $v^k \in V^k : \Omega_k \to \mathbb{R}$ as a function on k-forms. In other words, k-forms are functions that take k-vectors to $\mathbb{R}$, and k-vectors are functions that take k-forms to $\mathbb{R}$. 
 
 \begin{defn}
 	A tensor $T$ of rank [k n] $T: \Omega_k \times V^n \to \mathbb{R}$ is a multilinear map that takes a k-form (or k 1-forms) and an n-vector (or n 1-vectors) to $\mathbb{R}$. 
@@ -615,17 +625,7 @@ These two examples introduce two important classes of differential forms and the
 
 It follows from this that all exact forms are closed (since $\eth\eth\omega = 0$ for all forms). But once again, not all closed forms are exact, such as in the case of the $A$ field above. However, a region may be constructed such that the closed form is \emph{locally} exact. The only requirement to this region is that it does not include the discontinuity, the origin. Therefore, a potential exists in that local region. Thus, a field may be locally conservative, even if it is not globally conservative. 
 
-\section{Electricity and Magnetism}
 
-\textbf{In order to do this, need a hodge dual, so need perpendicular, so need a metric. Otherwise can only have curl of E equals derivative of B in t. }
-
-\textbf{Integral equations are stronger than the differential equations. You can have the differential equation satisfied, put holes in the area, then the integral equation fails. The hole stops us from being able to see the surface as a bunch of additive infinitesimal parts}
-
-- We have work, this relates to force, and the electric field (magnetic field does no work)
-
-- We can relate the electric force to a potential using the boundary functional (i.e. $f_e = -\eth\phi$)
-
-- Define the field strength tensor
 
 
 \textbf{NOTE: In fluid dynamics for divergenceless fluid, there's something called stream functions}
